@@ -1,6 +1,7 @@
 package com.recruitify.webapi.common.token.service;
 
 import com.recruitify.webapi.common.config.JwtConfig;
+import com.recruitify.webapi.common.security.UserDetailsImpl;
 import io.jsonwebtoken.*;
 import io.jsonwebtoken.io.Decoders;
 import io.jsonwebtoken.security.Keys;
@@ -11,7 +12,6 @@ import org.springframework.security.authentication.UsernamePasswordAuthenticatio
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
-import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.stereotype.Service;
 
@@ -25,6 +25,11 @@ import java.util.stream.Collectors;
 public class TokenService implements ITokenService {
     private final JwtConfig jwtConfig;
 
+    /** Authority claim name — stores both role (ROLE_X) and permission authorities. */
+    static final String CLAIM_AUTHORITIES = "authorities";
+    /** User id claim — used by the auth filter to rehydrate UserDetailsImpl. */
+    static final String CLAIM_USER_ID = "uid";
+
     @Override
     public String generateAccessToken(UserDetails userDetails) {
         return generateToken(userDetails, jwtConfig.getExpirationMs());
@@ -37,7 +42,20 @@ public class TokenService implements ITokenService {
 
     private String generateToken(UserDetails userDetails, long expirationMs) {
         Map<String, Object> claims = new HashMap<>();
-        claims.put("roles", userDetails.getAuthorities());
+
+        // Persist authorities verbatim so @PreAuthorize("hasAuthority(...)")
+        // checks work without an extra DB lookup. userDetails.getAuthorities()
+        // already includes both ROLE_<role> and <permission> entries.
+        Collection<String> authorityNames = userDetails.getAuthorities() == null
+                ? Collections.emptyList()
+                : userDetails.getAuthorities().stream()
+                        .map(GrantedAuthority::getAuthority)
+                        .toList();
+        claims.put(CLAIM_AUTHORITIES, authorityNames);
+
+        if (userDetails instanceof UserDetailsImpl ud) {
+            claims.put(CLAIM_USER_ID, ud.getId());
+        }
 
         return Jwts.builder()
                 .claims(claims)
@@ -95,20 +113,68 @@ public class TokenService implements ITokenService {
 
             String username = claims.getSubject();
 
-            @SuppressWarnings("unchecked")
-            List<Map<String, String>> rolesMap = (List<Map<String, String>>) claims.get("roles");
+            Collection<String> rawAuthorities = readAuthorities(claims);
+            Collection<SimpleGrantedAuthority> granted = rawAuthorities.stream()
+                    .filter(Objects::nonNull)
+                    .map(String::trim)
+                    .filter(s -> !s.isEmpty())
+                    .map(SimpleGrantedAuthority::new)
+                    .collect(Collectors.toList());
 
-            Collection<GrantedAuthority> authorities = rolesMap != null ? rolesMap.stream()
-                    .map(role -> new SimpleGrantedAuthority(role.get("authority")))
-                    .collect(Collectors.toList()) : Collections.emptyList();
+            Long userId = readUserId(claims);
+            UserDetailsImpl principal = UserDetailsImpl.fromClaims(
+                    userId == null ? 0L : userId,
+                    username,
+                    granted.stream().map(SimpleGrantedAuthority::getAuthority).toList());
 
-            User principal = new User(username, "", authorities);
-
-            return new UsernamePasswordAuthenticationToken(principal, token, authorities);
+            return new UsernamePasswordAuthenticationToken(principal, token, granted);
         } catch (Exception e) {
             log.error("Authentication error: {}", e.getMessage());
             return null;
         }
+    }
+
+    @SuppressWarnings("unchecked")
+    private Collection<String> readAuthorities(Claims claims) {
+        // Preferred: a flat list of authority strings written by generateToken.
+        Object authoritiesClaim = claims.get(CLAIM_AUTHORITIES);
+        if (authoritiesClaim instanceof Collection<?> coll) {
+            List<String> result = new ArrayList<>(coll.size());
+            for (Object item : coll) {
+                if (item != null) result.add(item.toString());
+            }
+            return result;
+        }
+
+        // Backward compatibility: tokens issued before this change stored
+        // authorities as List<Map<String,String>> with key "authority".
+        Object legacy = claims.get("roles");
+        if (legacy instanceof Collection<?> coll) {
+            List<String> result = new ArrayList<>(coll.size());
+            for (Object item : coll) {
+                if (item instanceof Map<?, ?> map) {
+                    Object authority = map.get("authority");
+                    if (authority != null) result.add(authority.toString());
+                } else if (item != null) {
+                    result.add(item.toString());
+                }
+            }
+            return result;
+        }
+        return Collections.emptyList();
+    }
+
+    private Long readUserId(Claims claims) {
+        Object uid = claims.get(CLAIM_USER_ID);
+        if (uid instanceof Number n) return n.longValue();
+        if (uid instanceof String s) {
+            try {
+                return Long.parseLong(s);
+            } catch (NumberFormatException ignored) {
+                return null;
+            }
+        }
+        return null;
     }
 
     private SecretKey getSigningKey() {
